<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="70dp">

        <EditText
            android:id="@+id/editTextUsername_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="15"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextUserPassword_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername_su"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername_su"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextUserPassword2_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="20"
            android:inputType="textPassword"
            android:hint="@string/password2_hint"
            app:layout_constraintStart_toStartOf="@+id/editTextUserPassword_su"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword_su"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/termsCheckBox_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/terms_and_conditions"
            app:layout_constraintStart_toStartOf="@+id/editTextUserPassword2_su"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword2_su" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsCheckBox_su" />

        <TextView
            android:id="@+id/infoText_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/account_on"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"/>

        <Button
            android:id="@+id/directButton_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/direct_me_to_si"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoText_su" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/inform_gear"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/directButton_si"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
