<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".drawer.togo.Fragment_tg_list_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/destination"
            android:layout_marginStart="30dp"
            android:layout_marginTop="65dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destination" />

        <EditText
            android:id="@+id/destination_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_marginStart="20dp"
            android:inputType="textPersonName"
            android:hint="@string/destination_hint"
            app:layout_constraintStart_toEndOf="@+id/destination"
            app:layout_constraintBottom_toBottomOf="@+id/destination"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/country_text"
            android:layout_width="250dp"
            android:hint="@string/country_hint"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:ems="15"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/chooseImageBtn"
            android:text="@string/select_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/country"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="75dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/deleteBtn"
            android:text="@string/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/country"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="75dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            android:layout_marginEnd="75dp"
            app:layout_constraintBottom_toBottomOf="@+id/chooseImageBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"
            android:layout_marginEnd="75dp"
            app:layout_constraintBottom_toBottomOf="@+id/deleteBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/selectedImg"
            android:layout_width="350dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@id/chooseImageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>