<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_gravity="top"
    android:background="@color/colorAccent"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/drawer_header_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/app_name1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawer_header_title1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/app_name2" />

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher_custom_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/content_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/developer"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image"/>
</androidx.constraintlayout.widget.ConstraintLayout>